<resources>
    <string name="app_name">IOU Accountant</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search_tooltip">Search</string>

    <string name="calc_1">1</string>
    <string name="calc_2">2</string>
    <string name="calc_3">3</string>
    <string name="calc_4">4</string>
    <string name="calc_5">5</string>
    <string name="calc_6">6</string>
    <string name="calc_7">7</string>
    <string name="calc_8">8</string>
    <string name="calc_9">9</string>
    <string name="calc_0">0</string>
    <string name="calc_dot">.</string>
    <string name="calc_clear">C</string>
    <string name="calc_add">+</string>
    <string name="calc_sub">-</string>
    <string name="calc_mul">*</string>
    <string name="calc_div">/</string>
    <string name="calc_calc">Calculate</string>

    <string name="title_activity_card_view">CardViewActivity</string>
    <string name="cardview_contents">This is a CardView widget. CardView widgets can have
        shadows and rounded corners.
        \n\nTo create a card with a shadow, use the <font fgcolor="#FFFFFFFF">android:elevation</font>
        attribute.
        \n\nTo set the corner radius in your layouts, use the <font fgcolor="#FFFFFFFF">card_view:cardCornerRadius</font> attribute.
    </string>
    <string name="cardview_radius_seekbar_text">Radius</string>
    <string name="cardview_elevation_seekbar_text">Elevation</string>

    <string name="phone_numbers">Phone Numbers</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_message">Hey! Just contacted you to remind you that you owe me 350kr, preferably cash ;)</string>
    <string name="title_activity_iou_information">IouInformation</string>
    <string name="title_activity_add_iou">New IOU</string>
    <string name="menu_info_done">Clear</string>
    <string name="menu_info_edit">Edit</string>
    <string name="menu_info_sms">SMS</string>
    <string name="title_activity_iou_edit">IouEdit</string>
    <string name="title_activity_send_sms">SendSms</string>

</resources>
