<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingTop="8dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/calc_result"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="50sp"
            android:inputType="number"
            android:gravity="right" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/calc_7"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="40sp"
            android:id="@+id/calc_btn_7" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="40sp"
            android:text="@string/calc_8"
            android:id="@+id/calc_btn_8" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="40sp"
            android:text="@string/calc_9"
            android:id="@+id/calc_btn_9" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="40sp"
            android:text="@string/calc_div"
            android:id="@+id/calc_btn_div" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="40sp"
            android:text="@string/calc_4"
            android:id="@+id/calc_btn_4" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="40sp"
            android:text="@string/calc_5"
            android:id="@+id/calc_btn_5" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="40sp"
            android:text="@string/calc_6"
            android:id="@+id/calc_btn_6" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="40sp"
            android:text="@string/calc_mul"
            android:id="@+id/calc_btn_mul" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="40sp"
            android:text="@string/calc_1"
            android:id="@+id/calc_btn_1" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="40sp"
            android:text="@string/calc_2"
            android:id="@+id/calc_btn_2" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="40sp"
            android:text="@string/calc_3"
            android:id="@+id/calc_btn_3" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="40sp"
            android:text="@string/calc_sub"
            android:id="@+id/calc_btn_sub" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="40sp"
            android:text="@string/calc_0"
            android:id="@+id/calc_btn_0" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="40sp"
            android:text="@string/calc_dot"
            android:id="@+id/calc_btn_dot" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="40sp"
            android:text="@string/calc_clear"
            android:id="@+id/calc_btn_clear" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="40sp"
            android:text="@string/calc_add"
            android:id="@+id/calc_btn_add" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/calc_calc"
            android:id="@+id/calc_btn_calc"
            android:onClick="calculate" />
    </LinearLayout>


</LinearLayout>