<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/iou_info_menu_edit"
        android:icon="@drawable/ic_action_mode_edit"
        android:orderInCategory="100"
        android:title="@string/menu_info_edit"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/iou_info_menu_sms"
        android:icon="@drawable/ic_action_textsms"
        android:orderInCategory="200"
        android:title="@string/menu_info_sms"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/iou_info_menu_clear"
        android:icon="@drawable/ic_action_money_off"
        android:orderInCategory="300"
        android:title="@string/menu_info_done"
        app:showAsAction="ifRoom" />

</menu>